--- a/css/style.scss
+++ b/css/style.scss
@@ -70,7 +70,7 @@ html, body {
 	right: 0;
 	left: initial;
 	height: auto !important;
-	padding-bottom: 0 !important;
+	padding: 0 !important;
 	overflow: hidden;
 
 	& > li {
@@ -102,6 +102,7 @@ html, body {
 #canvas_container { 
 	position: fixed;
 	height: 100%;
+	pointer-events: none;
 }
 
 
@@ -112,8 +113,8 @@ html, body {
 	width: 100%;
 	height: 100%;
 
-	transition-property: transform;
-	transition-duration: 1s;
+	transition: transform 1s, opacity 0.2s;
+	opacity: 1;
 
 	z-index: 1;
 
@@ -121,6 +122,8 @@ html, body {
 	background-color: #2d2d2d;
 	background-size: cover;
 	background-position: center;
+
+	pointer-events: none;
 
 	&:before {
 		content: "";
@@ -253,4 +256,16 @@ iframe {
 .softhide {
 	opacity: 0;
 	pointer-events: none;
+}
+
+ul {
+	padding-left: 3rem !important;
+}
+
+ul li {
+    list-style-type: disc !important;
+}
+
+strong {
+	font-weight: bold !important;
 }
